--- a/Education.html
+++ b/Education.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Ajit's Portfolio</title>
+    <title>Ratiba's Portfolio</title>
     <link rel="icon" href="Image/engineer.ico">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -30,7 +30,7 @@
 <body class="container-fluid body_section">
     <header>
         <nav class="navbar navbar-expand-lg navbar-light ">
-            <a class="navbar-brand brand-name" href="#">Ajit Verma</a>
+            <a class="navbar-brand brand-name" href="#">Ratiba KADI</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -45,7 +45,7 @@
                         <a class="nav-link headerachor" href="Education.html">Education</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link headerachor" href="skill.html">Skills</a>
+                        <a class="nav-link headerachor" href="skill.html">Work Experience</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link headerachor" href="Project.html">Projects</a>
@@ -62,12 +62,12 @@
                 <img class="Programming" src="Image/Programming.svg" alt="">
             </div>
             <div class="col-lg-6 col-md Coding">
-                <h1>Competitive Programming</h1>
-                <ul class="competitive_icon">
+                <img src="Image/sqlpandaspy.jpg" alt="" >
+                <!-- <ul class="competitive_icon">
                     <li><a href="https://www.hackerrank.com/Ajitverma?hr_r=1" target="_blank"><i class="fab fa-hackerrank fa-4x"></i><a></i></li>
                     <li><a href="https://www.hackerearth.com/@ajit457" target="_blank"><i class="iconify" data-icon="simple-icons:hackerearth" data-inline="false" data-width=50px
                             data-height=50px></i></a></li>
-                </ul>
+                </ul> -->
             </div>
         </div>
     </section>
@@ -83,22 +83,44 @@
                 </div>
                 <div class="timeline-section">
                     <div class="timeline-date">
-                        2017 - Present
+                        2023 - 2024
                     </div>
                     <div class="row">
                         <div class="col-lg">
                             <div class="timeline-box">
                                 <div class="box-title">
-                                    <i class="fas fa-graduation-cap" aria-hidden="true"></i>J.C. Bose University of
-                                    Science and Technology, YMCA
-                                    <p class="degree">B.tech in Computer Engineering</p>
+                                    <i class="fas fa-graduation-cap" aria-hidden="true"></i>Coventry University
+                                    <p class="degree">Software & Data Engineering</p>
                                 </div>
                                 <div class="box-content">
                                     <a class="btn btn-sm btn-dark float-right" role="button" href="https://jcboseust.ac.in/"
                                        target=_blank style="color: white;">Website</a>
-                                    <div class="box-item">💥 I have studied software engineering subjects like Data Structures,
-                                        Algorithms, DBMS, OS, CA, CN etc.</div>
-                                    <div class="box-item"><b>💥 CGPA</b>: 7.14 </div>
+                                    <div class="box-item">💥Armed with a wide range of skills including advanced data science techniques,I'm ready to bring valuable 
+                                        contributions to companies reliant on data.</div>
+                                    <div class="box-item"><b>💥 Overall Grade</b>: 70%</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="timeline-section">
+                    <div class="timeline-date">
+                        2021 - 2023
+                    </div>
+                    <div class="row">
+                        <div class="col-lg">
+                            <div class="timeline-box">
+                                <div class="box-title">
+                                    <i class="fas fa-graduation-cap" aria-hidden="true"></i>General Digital Engineering School
+                                    <p class="degree">Software & Information System Engineering</p>
+                                </div>
+                                <div class="box-content">
+                                    <a class="btn btn-sm btn-dark float-right" role="button" href="https://drive.google.com/file/d/1BHOLUMGDITW4HTZmD4K9zEsoTl2im02K/view?usp=sharing/"
+                                       target=_blank style="color: white;">Website</a>
+                                    <div class="box-item">💥 I possess extensive skills in computer science and engineering, including advanced programming, data structures, operating systems, network protocols, machine learning, and professional experience in DevOps, 
+                                        mobile development, and cybersecurity.
+                                    </div>
+                                    <div class="box-item"><b>💥 overall Grade</b>: 15/20 </div>
                                 </div>
                             </div>
                         </div>
@@ -107,21 +129,21 @@
 
                 <div class="timeline-section">
                     <div class="timeline-date">
-                        2015 - 2017
+                        2019 - 2021
                     </div>
                     <div class="row">
                         <div class="col-lg">
                             <div class="timeline-box">
                                 <div class="box-title">
-                                    <i class="fas fa-school" aria-hidden="true"></i> G.B.S.S School, Sarojini Nagar <p class="degree">Senior Secondary Education</p>
+                                    <i class="fas fa-graduation-cap" aria-hidden="true"></i>Sorbonne University
+                                    <p class="degree">Engineering Science</p>
                                 </div>
                                 <div class="box-content">
-                                    <a class="btn btn-sm btn-dark float-right" role="button"
-                                        style="color: white;">Details</a>
-                                    <div class="box-item">💥 I have studied the subjects Physics,
-                                        Chemistry, Mathematics etc. </div>
-                                    <div class="box-item"><b>💥 Percentage</b>: 80%</div>
-
+                                    <a class="btn btn-sm btn-dark float-right" role="button" href="https://drive.google.com/file/d/1pNHuiwgWzrpLGnw2EhRYYJRidu-hSgD6/view?usp=sharing/"
+                                       target=_blank style="color: white;">Website</a>
+                                    <div class="box-item">💥 I have studied software engineering subjects like Data Structures,
+                                        Algorithms, DBMS, OS, CA, CN etc.</div>
+                                    <div class="box-item"><b>💥 CGPA</b>: 7.14 </div>
                                 </div>
                             </div>
                         </div>
@@ -137,14 +159,14 @@
         <div class="container certificate">
         <div class="row">
             <div class="col-md-4">
-                <a target="_blank" href="https://drive.google.com/file/d/1UUptDeZZIcQRmsBUYdaL9Yj6kwFIxAxQ/view?usp=sharing">
+                <a target="_blank" href="https://drive.google.com/file/d/14DtvUpt1aHQ-2yyaXIN07etvOLbBPFim/view?usp=sharing">
                     <div class="card mb-4 box-shadow">
                         <img class="card-img-top"
-                            src="Image/C++.jpg"
+                            src="Image/data.jpg"
                             alt="Card image cap">
                         <div class="card-body">
-                            <p class="card-text certificate-text">C++ with Data Structures and Algorithms
-                                <br><span style="color:gray">-by Coding Blocks</span>
+                            <p class="card-text certificate-text">Data Engineering foundations with Python,SQL
+                                <br><span style="color:gray">VS Code, PyCharm</span>
                             </p>
                         
                         </div>
@@ -152,34 +174,34 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a target="_blank" href="https://www.sololearn.com/Certificate/1024-18007548/pdf/">
+                <a target="_blank" href="https://drive.google.com/file/d/1po9r6RorxJnZklmDKgz7oy-gwL5mLKyG/view?usp=sharing">
                     <div class="card mb-4 box-shadow">
                         <img class="card-img-top"
-                            src="Image/JavaScript.jpg"
+                            src="Image/datapy.jpg"
                             alt="Card image cap">
                         <div class="card-body">
-                            <p class="card-text certificate-text">JavaScript Basics</p>
-                            <p class="certificate-text" style="color:gray">-by Sololearn</p>
+                            <p class="card-text certificate-text">Python3 - Pandas </p>
+                            <p class="certificate-text" style="color:gray">Jupyter , GoogleColab , Spyder</p>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-md-4">
-                <a target="_blank" href="https://drive.google.com/file/d/1xSYrX-rAThs5GAo1YVGYF2XuRXukm0tf/view?usp=sharing">
+                <a target="_blank" href="https://drive.google.com/file/d/1rLeuTXK7v-CnP_Jq949Ra97sywazQbk0/view?usp=sharing">
                     <div class="card mb-4 box-shadow">
                         <img class="card-img-top"
-                            src="Image/Data Science.jpg"
+                            src="Image/eng_level.jpg"
                             alt="Card image cap">
                         <div class="card-body">
-                            <p class="card-text certificate-text">Data Science</p>  
-                            <p class="certificate-text" style="color:gray">-by _____</p>  
+                            <p class="card-text certificate-text">English Level</p>  
+                            <p class="certificate-text" style="color:gray"> IELTS</p>  
                         </div>
                     </div>
                 </a>
             </div>
         </div>
     </section>
-    <footer class=footer>Made with ❤️ by Ajit Verma</footer>
+    <footer class=footer>Made with ❤️ by Ratiba KADI</footer>
 </body>
 
 </html>
