--- a/Project.html
+++ b/Project.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <title>Ajit's Portfolio</title>
+        <title>Ratiba's Portfolio</title>
         <link rel="icon" href="Image/engineer.ico">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <link rel="stylesheet" href="Project.css">
@@ -21,7 +21,7 @@
       <body class="container-fluid body_section">
               <header>
                     <nav class="navbar navbar-expand-lg navbar-light ">
-                      <a class="navbar-brand brand-name" href="#">Ajit Verma</a>
+                      <a class="navbar-brand brand-name" href="#">Ratiba KADI</a>
                       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
@@ -35,7 +35,7 @@
                             <a class="nav-link headerachor" href="Education.html">Education</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link headerachor" href="skill.html">Skills</a>
+                            <a class="nav-link headerachor" href="skill.html">Work Experience</a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link headerachor" href="Project.html">Projects</a>
@@ -48,26 +48,26 @@
                 </header>
                 <section id=Projects class="Section1">
                     <div class="row">
-                        <div class="col-lg-6 col-md-6">
+                        <!-- <div class="col-lg-6 col-md-6">
                             <img class="projectimage" src="Image/Project.svg" alt="">
-                        </div>
+                        </div> -->
                         <div class="col-lg-6 col-md-6 project-heading">
-                          <h1 class = "P-heading">Projects</h1>
+                          <!-- <h1 class = "P-heading">Projects</h1>
                           <p class="p-text">My Project uses various technologies to make the model more accurate and stable. As of
                             now, I haven't done many projects but in near future I will make more projects.
-                          </p>
+                          </p> -->
 
                         </div>
                     </div>
                     <div class="row Section1">
                       <div class="col-sm-6">
-                        <a class="Project-box" target="_blank" href="https://github.com/AjitVerma15/Advance-Attendence-System">
+                        <a class="Project-box" target="_blank" href="https://github.com/RatibaKADI/Snake_Game/">
                         <div class="card boxx">
                           <div class="card-body">
-                            <h5 class="card-title">Advanced Attendence System</h5>
-                            <p class="card-text project-text">This project makes the traditional attendence system advance by including features
-                              like marking attendence of students automatically using face recognition and detection.
-                              <span class="iconify" data-icon="logos:python" data-inline="false"></span>
+                            <h5 class="card-title">Snake Game </h5>
+                            <p class="card-text project-text">This project is a simple implementation of the 
+                              classic Snake Game in Python using the curses library.
+                              <span class="iconify" data-icon="logos:python" data-inline="false"><img class="iconify" src="Image/tensorflow_logo.png" alt=""></span><img class="iconify" src="Image/curses_py.png" alt="">
                             </p>
 
                           </div>
@@ -78,9 +78,65 @@
                         <a  class="Project-box" target="_blank" href="https://github.com/AjitVerma15/Telegram-Bot" >
                         <div class="card boxx">
                           <div class="card-body">
-                            <h5 class="card-title">Telegram Bot</h5>
-                            <p class="card-text project-text">This bot gives news on diferent topics like sports, entertainment, according to location and can do small-talk and also
-                              show the covid cases in your state.<span class="iconify" data-icon="logos:python" data-inline="false"></span><img class="iconify" src="Image/dialogflow.png" alt=""></p>
+                            <h5 class="card-title">Machine Learning Classification</h5>
+                            <p class="card-text project-text">This project aims to develop a machine learning model for 
+                              cancer classification using TensorFlow and scikit-learn.<span class="iconify" data-icon="logos:python" data-inline="false"></span><img class="iconify" src="Image/tensorflow_logo.png" alt=""><img class="iconify" src="Image/scikit_learn.png" alt=""></p>
+                          </div>
+                        </div>
+                      </a>
+                      </div>
+                    </div>
+                    <div class="row Section1">
+                      <div class="col-sm-6">
+                        <a class="Project-box" target="_blank" href="https://github.com/RatibaKADI/Tic-Tac-Toe_GAME">
+                        <div class="card boxx">
+                          <div class="card-body">
+                            <h5 class="card-title">Tic-Tac-Toe Game</h5>
+                            <p class="card-text project-text">The aim of the Tic Tac Toe game is for a player to successfully place three of their marks ( "X" or "O") in a row on a 3x3 grid.
+                              <span class="iconify" data-icon="logos:python" data-inline="false"></span>
+                            </p>
+
+                          </div>
+                        </div>
+                        </a>
+                      </div>
+                      <div class="col-sm-6">
+                        <a  class="Project-box" target="_blank" href="https://github.com/RatibaKADI/Android_Application" >
+                        <div class="card boxx">
+                          <div class="card-body">
+                            <h5 class="card-title"> Raw Materials Android App </h5>
+                            <p class="card-text project-text">Android app that allows users to purchase different raw materials (glass, wood, plastic, iron) for 
+                              creating kitchen utensils<span class="iconify" data-icon="logos:java" data-inline="false"></span>
+                              <span class="iconify" data-icon="logos:firebase" data-inline="false"></span></p>
+                          </div>
+                        </div>
+                      </a>
+                      </div>
+                    </div>
+                    <div class="row Section1">
+                      <div class="col-sm-6">
+                        <a class="Project-box" target="_blank" href="https://github.com/AjitVerma15/Advance-Attendence-System">
+                        <div class="card boxx">
+                          <div class="card-body">
+                            <h5 class="card-title">Welhome Web site</h5>
+                            <p class="card-text project-text">This project "Welhome" is an online platform that connects property owners with potential renters.
+                              <span class="iconify" data-icon="logos:html-5" data-inline="false"></span>
+                              <span class="iconify" data-icon="logos:css-3" data-inline="false"></span>
+                              <span class="iconify" data-icon="logos:javascript" data-inline="false"></span>
+
+                            </p>
+
+                          </div>
+                        </div>
+                        </a>
+                      </div>
+                      <div class="col-sm-6">
+                        <a  class="Project-box" target="_blank" href="https://github.com/RatibaKADI/Ping-Pong-Game" >
+                        <div class="card boxx">
+                          <div class="card-body">
+                            <h5 class="card-title">Ping-Pong Game</h5>
+                            <p class="card-text project-text">Ping Pong Game This is a simple implementation of the classic Ping Pong game 
+                              in Python using the Turtle graphics library.<img class="iconify" src="Image/turtle_py.png" alt=""></p>
                           </div>
                         </div>
                       </a>
@@ -88,7 +144,7 @@
                     </div>
                 </section>
 
-                <footer class=footer>Made with ❤️ by Ajit Verma</footer>
+                <footer class=footer>Made with ❤️ by Ratiba KADI</footer>
 
 </body>
 </html>
