--- a/skill.html
+++ b/skill.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Ajit's Portfolio</title>
+  <title>Ratiba's Portfolio</title>
   <link rel="icon" href="Image/engineer.ico">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -29,7 +29,7 @@
 <body class="container-fluid body_section">
   <header>
     <nav class="navbar navbar-expand-lg navbar-light ">
-      <a class="navbar-brand brand-name" href="#">Ajit Verma</a>
+      <a class="navbar-brand brand-name" href="#">Ratiba KADI</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -44,7 +44,7 @@
             <a class="nav-link headerachor" href="Education.html">Education</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link headerachor" href="skill.html">Skills</a>
+            <a class="nav-link headerachor" href="skill.html">Work Experience</a>
           </li>
           <li class="nav-item">
             <a class="nav-link headerachor" href="Project.html">Projects</a>
@@ -58,27 +58,30 @@
   <section class="Section1">
     <div class="row">
       <div class="col-lg-6 col-md-6">
-        <img class="skill-img" src="Image/Skills.svg" alt="">
-      </div>
+        <img class="skill-img" src="Image/stellantis.png" alt="">
+        <a class="btn btn-sm btn-custom float-right" role="button" href="https://drive.google.com/file/d/1yQtWtrk-WsIvtNvCzFnlwTJHn_mgeN54/view?usp=sharing" target="_blank" style="color: black; background-color: transparent; text-decoration: underline;">
+          <span style="color: black;">Details about my work</span>
+        </a>
+    </div>
       <div class="col-lg-6 col-md-6">
 
         <div id="SkillBox">
-          <center class="Skill-heading">Proficiency</center>
+          <center class="Skill-heading">High-level programming language</center>
           <div class="SkillBar">
             <div id="Skill-Cplus">
-              <span class="Skill-Area iconify" data-icon="logos:c-plusplus" data-inline="false" data-width="35" data-height="35"></span>
+              <span class="Skill-Area iconify" data-icon="logos:python" data-inline="false" data-width="35" data-height="35"></span>
             </div>
           </div>
 
           <div class="SkillBar">
             <div id="Skill-C">
-              <span class="Skill-Area iconify" data-icon="logos:c" data-inline="false" data-width="35" data-height="35"></span>
+              <span class="Skill-Area iconify" data-icon="logos:javascript" data-inline="false" data-width="35" data-height="35"></span>
             </div>
           </div>
 
           <div class="SkillBar">
             <div id="Skill-Python">
-              <span class="Skill-Area iconify" data-icon="logos:python" data-inline="false" data-width="35" data-height="35"></span>
+              <span class="Skill-Area iconify" data-icon="logos:java" data-inline="false" data-width="35" data-height="35"></span>
             </div>
           </div>
 
@@ -96,7 +99,7 @@
 
           <div class="SkillBar">
             <div id="Skill-JS">
-              <span class="Skill-Area iconify" data-icon="logos:javascript" data-inline="false" data-width="35" data-height="35"></span>
+              <span class="Skill-Area iconify" data-icon="logos:c" data-inline="false" data-width="35" data-height="35"></span>
             </div>
           </div>
 
@@ -105,11 +108,31 @@
               <span class="Skill-Area iconify" data-icon="dashicons:database" data-inline="false" style="color:black" data-width="35" data-height="35"></span>
             </div>
           </div>
+          <div class="SkillBar">
+            <div id="Skill-JS">
+              <span class="Skill-Area iconify" data-icon="logos:scala" data-inline="false" data-width="35" data-height="35"></span>
+            </div>
+          </div>
+          <div class="SkillBar">
+            <div id="Skill-JS">
+              <span class="Skill-Area iconify" data-icon="logos:c-sharp" data-inline="false" data-width="35" data-height="35"></span>
+            </div>
+          </div>
+          <div class="SkillBar">
+            <div id="Skill-JS">
+              <span class="Skill-Area iconify" data-icon="logos:gitlab" data-inline="false" data-width="35" data-height="35"></span>
+            </div>
+          </div>
+          <div class="SkillBar">
+            <div id="Skill-JS">
+              <span class="Skill-Area iconify" data-icon="logos:github" data-inline="false" data-width="35" data-height="35"></span>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </section>
-  <footer class=footer>Made with ❤️ by Ajit Verma</footer>
+  <footer class=footer>Made with ❤️ by Ratiba KADI</footer>
 </body>
 
 </html>
