--- a/Education.html
+++ b/Education.html
@@ -94,7 +94,7 @@
                                 </div>
                                 <div class="box-content">
                                     <a class="btn btn-sm btn-dark float-right" role="button" href="https://jcboseust.ac.in/"
-                                       target=_blank style="color: white;">Website</a>
+                                       target=_blank style="color: white;">Details</a>
                                     <div class="box-item">💥Armed with a wide range of skills including advanced data science techniques,I'm ready to bring valuable 
                                         contributions to companies reliant on data.</div>
                                     <div class="box-item"><b>💥 Overall Grade</b>: 70%</div>
@@ -116,7 +116,7 @@
                                 </div>
                                 <div class="box-content">
                                     <a class="btn btn-sm btn-dark float-right" role="button" href="https://drive.google.com/file/d/1BHOLUMGDITW4HTZmD4K9zEsoTl2im02K/view?usp=sharing/"
-                                       target=_blank style="color: white;">Website</a>
+                                       target=_blank style="color: white;">Details</a>
                                     <div class="box-item">💥 I possess extensive skills in computer science and engineering, including advanced programming, data structures, operating systems, network protocols, machine learning, and professional experience in DevOps, 
                                         mobile development, and cybersecurity.
                                     </div>
@@ -140,7 +140,7 @@
                                 </div>
                                 <div class="box-content">
                                     <a class="btn btn-sm btn-dark float-right" role="button" href="https://drive.google.com/file/d/1pNHuiwgWzrpLGnw2EhRYYJRidu-hSgD6/view?usp=sharing/"
-                                       target=_blank style="color: white;">Website</a>
+                                       target=_blank style="color: white;">Details</a>
                                     <div class="box-item">💥 I have studied software engineering subjects like Data Structures,
                                         Algorithms, DBMS, OS, CA, CN etc.</div>
                                     <div class="box-item"><b>💥 CGPA</b>: 7.14 </div>
