--- a/Project.html
+++ b/Project.html
@@ -75,7 +75,7 @@
                         </a>
                       </div>
                       <div class="col-sm-6">
-                        <a  class="Project-box" target="_blank" href="https://github.com/AjitVerma15/Telegram-Bot" >
+                        <a  class="Project-box" target="_blank" href="https://github.com/RatibaKADI/Cancer_Classification_ML" >
                         <div class="card boxx">
                           <div class="card-body">
                             <h5 class="card-title">Machine Learning Classification</h5>
@@ -115,7 +115,7 @@
                     </div>
                     <div class="row Section1">
                       <div class="col-sm-6">
-                        <a class="Project-box" target="_blank" href="https://github.com/AjitVerma15/Advance-Attendence-System">
+                        <a class="Project-box" target="_blank" href="https://github.com/RatibaKADI/welhome">
                         <div class="card boxx">
                           <div class="card-body">
                             <h5 class="card-title">Welhome Web site</h5>
