--- a/skill.html
+++ b/skill.html
@@ -66,7 +66,7 @@
       <div class="col-lg-6 col-md-6">
 
         <div id="SkillBox">
-          <center class="Skill-heading">High-level programming language</center>
+          <center class="Skill-heading"> Programming Languages</center>
           <div class="SkillBar">
             <div id="Skill-Cplus">
               <span class="Skill-Area iconify" data-icon="logos:python" data-inline="false" data-width="35" data-height="35"></span>
