--- a/skill.html
+++ b/skill.html
@@ -58,7 +58,7 @@
   <section class="Section1">
     <div class="row">
       <div class="col-lg-6 col-md-6">
-        <img class="skill-img" src="Image/stellantis.png" alt="">
+        <img class="skill-img" src="Image/stellantis.png" alt="Stellantis">
         <a class="btn btn-sm btn-custom float-right" role="button" href="https://drive.google.com/file/d/1yQtWtrk-WsIvtNvCzFnlwTJHn_mgeN54/view?usp=sharing" target="_blank" style="color: black; background-color: transparent; text-decoration: underline;">
           <span style="color: black;">Details about my work</span>
         </a>
