--- a/Education.html
+++ b/Education.html
@@ -93,7 +93,7 @@
                                     <p class="degree">Software & Data Engineering</p>
                                 </div>
                                 <div class="box-content">
-                                    <a class="btn btn-sm btn-dark float-right" role="button" href="https://jcboseust.ac.in/"
+                                    <a class="btn btn-sm btn-dark float-right" role="button" href="https://www.coventry.ac.uk/course-structure/pg/eec/software-development-msc/"
                                        target=_blank style="color: white;">Details</a>
                                     <div class="box-item">💥Armed with a wide range of skills including advanced data science techniques,I'm ready to bring valuable 
                                         contributions to companies reliant on data.</div>
