--- a/Education.html
+++ b/Education.html
@@ -94,7 +94,7 @@
                                 </div>
                                 <div class="box-content">
                                     <a class="btn btn-sm btn-dark float-right" role="button" href="https://www.coventry.ac.uk/course-structure/pg/eec/software-development-msc/"
-                                       target=_blank style="color: white;">Details</a>
+                                       target=_blank style="color: white;">Website</a>
                                     <div class="box-item">💥Armed with a wide range of skills including advanced data science techniques,I'm ready to bring valuable 
                                         contributions to companies reliant on data.</div>
                                     <div class="box-item"><b>💥 Overall Grade</b>: 70%</div>
