--- a/skill.html
+++ b/skill.html
@@ -66,9 +66,11 @@
         <div id="SkillBox">
           <center class="Skill-heading"> Programming Languages
              <a class="btn btn-sm btn-custom float-right" role="button" href="https://drive.google.com/file/d/1TLonoykjATmGYjiex0qt48Sa-mB77Y34/view?usp=sharing" target="_blank" style="color: black; background-color: transparent; text-decoration: underline;">
-               <span style="color: black;">Details about my work</span>
+               <span style="color: black;">Details about my work <br></span>
+              
              </a>
           </center>
+
           <div class="SkillBar">
             <div id="Skill-Cplus">
               <span class="Skill-Area iconify" data-icon="logos:python" data-inline="false" data-width="35" data-height="35"></span>
