--- a/skill.html
+++ b/skill.html
@@ -73,7 +73,7 @@
 
           <div class="SkillBar">
             <div id="Skill-Cplus">
-              <span class="Skill-Area iconify" data-icon="logos:python" data-inline="false" data-width="35" data-height="35"></span>
+              <span <br> class="Skill-Area iconify" data-icon="logos:python" data-inline="false" data-width="35" data-height="35"></span>
             </div>
           </div>
 
