--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
                 </div>  
                   <div class="col-lg-6 section-1">
                       <h1 class = "Hello">Hello! I'm Ratiba <span class="wave">👋</span></h1>
-                      <p>A passionate Software & Information System Engineer having experience in Data Analytics,
+                      <p>A Passionate Software & Data Engineer with 3 Years of Experience in Data Engineering, Software Development and Computer Science. 
+                        Apprenticed at Stellantis Group, specializing in leveraging innovative technologies to drive impactful solutions.
                           Machine Learning and Data Science </p>
                           <div class=social_media_icon>
                             <a class="btn" href="https://www.instagram.com/ratiba.kadi/" target=_blank>
