--- a/Education.html
+++ b/Education.html
@@ -74,7 +74,7 @@
     <section>
         <div class="container">
             <div class="Heading">
-                <h1>Degrees Received</h1>
+                <h1>Educational Background</h1>
                 <br>
             </div>
             <div class="timeline">
@@ -136,7 +136,7 @@
                             <div class="timeline-box">
                                 <div class="box-title">
                                     <i class="fas fa-graduation-cap" aria-hidden="true"></i>Sorbonne University
-                                    <p class="degree">Engineering Science</p>
+                                    <p class="degree">Computer Science</p>
                                 </div>
                                 <div class="box-content">
                                     <a class="btn btn-sm btn-dark float-right" role="button" href="https://drive.google.com/file/d/1pNHuiwgWzrpLGnw2EhRYYJRidu-hSgD6/view?usp=sharing/"
