--- a/contact.html
+++ b/contact.html
@@ -71,14 +71,14 @@
                      <li class="icon"><a href="https://www.linkedin.com/in/ratiba-kadi-260070208/" target=_blank><span class="iconify linkedin" data-icon="entypo-social:linkedin-with-circle" data-inline="false"  data-width="50" data-height="50"></span></li></a>
                     <li class="icon"><a href="mailto:kadiratiba9@gmail.com" target=_blank><span class="iconify google" data-icon="ant-design:google-plus-circle-filled" data-inline="false" data-width="50" data-height="50"></span></li></a>
                     </ul>
-                    <a href="https://drive.google.com/file/d/186TTHheyEbxnSMGdc3sMOOr7uvcGv4Dx/view?usp=sharing" target=_blank><button type="button" class="btn btn-primary btn-lg Resume">See my Resume</button></a>
+                    <a href="https://drive.google.com/file/d/1Q6VbWglIO7Gomc_iQPxa-Cc6pG69I3YG/view?usp=sharing" target=_blank><button type="button" class="btn btn-primary btn-lg Resume">See my Resume</button></a>
              </div>
         </div>
         </section>
     <section>
         <div class="second-section">
             <h1 class="connect">Eager to collaborate and create innovative projects!</h1>
-            <a class="sayhello" href="#contact">Say Hello <span class="wave">👋</span></a>
+            <a class="sayhello" href="message.html">Say Hello <span class="wave">👋</span></a>
             <div class="col-lg-6 connect-image">
             <img  class= "connection" src="Image/connection.svg" alt="">
         </div>
