--- a/skill.html
+++ b/skill.html
@@ -65,7 +65,7 @@
 
         <div id="SkillBox">
           <center class="Skill-heading"> Programming Languages
-             <a class="btn btn-sm btn-custom float-right" role="button" href="https://drive.google.com/file/d/1TLonoykjATmGYjiex0qt48Sa-mB77Y34/view?usp=sharing" target="_blank" style="color: black; background-color: transparent; text-decoration: underline;">
+             <a class="btn btn-sm btn-custom float-right" role="button" href="https://docs.google.com/document/d/1bw8tCjWqxgcJm62JBJUw3KM5gbxKcEkDLQXiUsvGbqU/edit?usp=sharing" target="_blank" style="color: black; background-color: transparent; text-decoration: underline;">
                <span style="color: black;">Details about my work </span>
              </a>
           </center>
